--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,13 +1,15 @@
 @import "./tailwind.css";
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 #app {
     min-height: 100vh;
 }
 
 .markdown {
-    font-family: inherit;
-    color: var(--color-base-content);
+    color: black;
     line-height: 1.6;
     width: 100%;
 }
